--- a/src/Host/H.LowCode.Admin.Host/Components/App.razor
+++ b/src/Host/H.LowCode.Admin.Host/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="icon" type="image/png" href="logo.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
-    <!-- H.LowCode.Admin.Host -->
+    <!-- H.LowCode.Workbench.Host -->
     <link rel="stylesheet" href="H.LowCode.Admin.Host.styles.css" />
     <link rel="stylesheet" href="admin.css" />
 
