- H.Lowcode.Workbench 相关命名由 Admin 重命名为 Workbench - 将 H.LowCode.DesignEngine.Admin 中的 GetAppsAsync、SaveAppAsync api 移到 H.LowCode.Workbench

--- a/src/Workbench/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
@@ -1,5 +1,5 @@
 ﻿@namespace H.LowCode.Workbench
-@layout ProAdminLayout
+@layout WorkbenchLayout
 
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
@@ -82,7 +82,7 @@
 
         var httpClient = HttpClientFactory.CreateClient();
         httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
-        var result = await httpClient.PostAsync($"api/designengine/saveapp", content);
+        var result = await httpClient.PostAsync($"api/workbench/saveapp", content);
 
         return result;
     }
