--- a/src/Workbench/H.LowCode.Workbench/Pages/MarketCenter.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/MarketCenter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/workbench/marketcenter"
 @namespace H.LowCode.Workbench
-@layout ProAdminLayout
+@layout WorkbenchLayout
 
 <style>
     .market-banner {
