--- a/src/Workbench/H.LowCode.Workbench/Pages/Markets/AppPopularTemplates.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Markets/AppPopularTemplates.razor
@@ -1,5 +1,5 @@
 ﻿@namespace H.LowCode.Workbench
-@layout ProAdminLayout
+@layout WorkbenchLayout
 
 <Card Title="图书管理系统" Style="float:left; width:250px; margin:5px;">
     <Extra>
