--- a/src/Workbench/H.LowCode.Workbench/Pages/Markets/AppTemplates.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Markets/AppTemplates.razor
@@ -1,5 +1,5 @@
 ﻿@namespace H.LowCode.Workbench
-@layout ProAdminLayout
+@layout WorkbenchLayout
 
 <div style="margin:10px 5px;">
     <Segmented Size="SegmentedSize.Large" Labels=@(new[]{"全部", "OA", "CRM", "ERP", "门户", "医疗", "教育", "酒店", "餐饮", "水务"}) />
