--- a/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/workbench/solutioncenter"
 @namespace H.LowCode.Workbench
-@layout ProAdminLayout
+@layout WorkbenchLayout
 
 <style>
     .solution-banner {
