- 页面管理功能完善 - 添加 caseapp 用例系统 典型页面(空页面)及菜单

--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Layout/DesignEngineAdminLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Layout/DesignEngineAdminLayout.razor
@@ -8,7 +8,7 @@
 
 <link href="_content/H.LowCode.DesignEngine.Admin/designengineadmin.css" rel="stylesheet" />
 
-<AntDesign.ProLayout.BasicLayout Class="designengineadmin" Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
+<AntDesign.ProLayout.BasicLayout FixedHeader="true" Class="designengineadmin" Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
     Layout="AntDesign.ProLayout.Layout.Side">
     <RightContentRender>
         RightContent
