--- a/src/Workbench/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
+++ b/src/Workbench/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>H.LowCode</PageTitle>
 
-<AntDesign.ProLayout.BasicLayout Logo="@("logo.png")" Title="H.LowCode" MenuData="_menuData"
+<AntDesign.ProLayout.BasicLayout FixedHeader="true" Logo="@("logo.png")" Title="H.LowCode" MenuData="_menuData"
     Layout="AntDesign.ProLayout.Layout.Top">
     <RightContentRender>
         RightContent
