--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>@State2.Value</PageTitle>
 
-<AntDesign.ProLayout.BasicLayout Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
+<AntDesign.ProLayout.BasicLayout FixedHeader="true" Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
     Layout="AntDesign.ProLayout.Layout.Side">
     <RightContentRender>
         @*<AntDesign.Pro.Template.Components.RightContent />*@
