--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -11,6 +11,7 @@
 @using AntDesign
 @using H.LowCode.DesignEngine
 @using H.LowCode.DesignEngine.Abstraction
+@using H.LowCode.DesignEngine.Model
 @using H.LowCode.MetaSchema
 @using H.Extensions.System
 @using H.Util.Blazor
