--- a/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
@@ -88,7 +88,7 @@
         var httpClient = HttpClientFactory.CreateClient();
         httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
 
-        var result = await httpClient.GetFromJsonAsync<IList<AppSchema>>($"api/workbench/getapps");
+        var result = await httpClient.GetFromJsonAsync<IList<AppSchema>>($"api/designengine/getapps");
         return result;
     }
 
