--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
@@ -8,11 +8,8 @@
 
 @code
 {
-    [CascadingParameter(Name = "appId")]
-    public string AppId { get; set; }
-
-    [CascadingParameter(Name = "pageId")]
-    public string PageId { get; set; }
+    [CascadingParameter(Name = "pageCascading")]
+    public PageModel PageCascading { get; set; }
 
     [Parameter]
     public ComponentSchema Component { get; set; }
@@ -45,7 +42,7 @@
         else
         {
             //设置当前拖拽项
-            DragDropStateService.SetCurrentDragComponent(AppId, PageId, component);
+            DragDropStateService.SetCurrentDragComponent(PageCascading.AppId, PageCascading.PageId, component);
         }
     }
 }
