--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -35,11 +35,8 @@
 </div>
 
 @code {
-    [CascadingParameter(Name = "appId")]
-    public string AppId { get; set; }
-
-    [CascadingParameter(Name = "pageId")]
-    public string PageId { get; set; }
+    [CascadingParameter(Name = "pageCascading")]
+    public PageModel PageCascading { get; set; }
 
     [Parameter]
     public ComponentSchema Component { get; set; }
@@ -98,20 +95,20 @@
         Component.Opacity = 0.2;
 
         //记录当前选中对象
-        DragDropStateService.SetCurrentDragComponent(AppId, PageId, Component);
+        DragDropStateService.SetCurrentDragComponent(PageCascading.AppId, PageCascading.PageId, Component);
     }
     
     private void OnDragEnter(DragEventArgs dragEventArgs)
     {
-        DragDropStateService.SetLastDragOverComponent(AppId, PageId, Component);
+        DragDropStateService.SetLastDragOverComponent(PageCascading.AppId, PageCascading.PageId, Component);
     }
 
     private void OnDragOver(DragEventArgs dragEventArgs)
     {
-        if (ReferenceEquals(DragDropStateService.GetCurrentDragComponent(AppId, PageId), Component))
+        if (ReferenceEquals(DragDropStateService.GetCurrentDragComponent(PageCascading.AppId, PageCascading.PageId), Component))
             return;
 
-        if (DateTime.Now < DragDropStateService.GetLastDragOverTime(AppId, PageId).AddMilliseconds(100))
+        if (DateTime.Now < DragDropStateService.GetLastDragOverTime(PageCascading.AppId, PageCascading.PageId).AddMilliseconds(100))
             return;
 
         //设置移动位置样式，拖拽到目标元素上半部分时，上方添加虚线边框，下半部分时下方添加虚线边框
@@ -126,13 +123,13 @@
             Component.DragEffectStyle = "border-bottom: 2px dashed #1890ff; height: auto;";
             Component.IsDropedAfter = true;
         }
-        DragDropStateService.SetLastDragOverTime(AppId, PageId, DateTime.Now);
+        DragDropStateService.SetLastDragOverTime(PageCascading.AppId, PageCascading.PageId, DateTime.Now);
     }
 
     private void OnDragLeave()
     {
         //如果当前被拖拽的组件和拖拽到上面的组件是同一个，直接返回
-        if (ReferenceEquals(DragDropStateService.GetCurrentDragComponent(AppId, PageId), Component))
+        if (ReferenceEquals(DragDropStateService.GetCurrentDragComponent(PageCascading.AppId, PageCascading.PageId), Component))
             return;
 
         Console.WriteLine("OnDragLeave");
